--- a/springboot-admin.properties
+++ b/springboot-admin.properties
@@ -1,1 +1,4 @@
 server.port=8802
+
+
+spring.boot.admin.routes.endpoints: env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream,turbine.stream
