--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -1,6 +1,7 @@
 
 zuul.routes.feign-client.url=http://localhost:9010
 zuul.routes.service-client.url=http://localhost:9001
+zuul.routes.application-service.url=http://localhost:9001
 
 ribbon.eureka.enabled=false
 
