--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -2,6 +2,7 @@
 zuul.routes.feign-client.url=http://localhost:9010
 zuul.routes.service-client.url=http://localhost:9001
 zuul.routes.application-service.url=http://localhost:9001
+zuul.routes.user-service.url=http://localhost:9001
 
 ribbon.eureka.enabled=false
 
