--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -4,6 +4,9 @@
 #zuul.routes.application-service.url=http://localhost:9020
 #zuul.routes.user-service.url=http://localhost:8801
 
+zuul.routes.feign-client.serviceId=feign-client
+zuul.routes.application-service.serviceId=application-service
+
 #ribbon.eureka.enabled=false
 
 ribbon.eureka.enabled=true
