--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -5,7 +5,10 @@
 #zuul.routes.user-service.url=http://localhost:8801
 
 zuul.routes.feign-client.serviceId=feign-client
+zuul.routes.feign-client.path=feign-client
+
 zuul.routes.application-service.serviceId=application-service
+zuul.routes.application-service.path=application-service
 
 #ribbon.eureka.enabled=false
 
