--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -1,17 +1,25 @@
+server.port=9999
 
+### 直接写死服务的端口号，此时不需要使用euruka功能
 #zuul.routes.feign-client.url=http://localhost:9010
 #zuul.routes.service-client.url=http://localhost:9001
 #zuul.routes.application-service.url=http://localhost:9020
 #zuul.routes.user-service.url=http://localhost:8801
+#ribbon.eureka.enabled=false
 
+### 通过名称查找服务，需要使用euraka功能，通过服务名字查找
 zuul.routes.feign-client.serviceId=feign-client
 zuul.routes.feign-client.path=feign-client
 
 zuul.routes.application-service.serviceId=application-service
 zuul.routes.application-service.path=application-service
 
-#ribbon.eureka.enabled=false
+zuul.routes.user-service.serviceId=user-service
+zuul.routes.user-service.path=user-service
+
+zuul.routes.service-client.serviceId=service-client
+zuul.routes.service-client.path=service-client
+
 
 ribbon.eureka.enabled=true
 
-server.port=9999
