--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -9,16 +9,16 @@ server.port=9999
 
 ### 通过名称查找服务，需要使用euraka功能，通过服务名字查找
 zuul.routes.feign-client.serviceId=feign-client
-zuul.routes.feign-client.path=feign-client
+zuul.routes.feign-client.path=/feign-client/**
 
 zuul.routes.application-service.serviceId=application-service
-zuul.routes.application-service.path=application-service
+zuul.routes.application-service.path=/application-service/**
 
 zuul.routes.user-service.serviceId=user-service
-zuul.routes.user-service.path=user-service
+zuul.routes.user-service.path=/user-service/**
 
 zuul.routes.service-client.serviceId=service-client
-zuul.routes.service-client.path=service-client
+zuul.routes.service-client.path=/service-client/**
 
 
 ribbon.eureka.enabled=true
