--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -5,7 +5,7 @@ server.port=9999
 #zuul.routes.service-client.url=http://localhost:9001
 #zuul.routes.application-service.url=http://localhost:9020
 #zuul.routes.user-service.url=http://localhost:8801
-#ribbon.eureka.enabled=false
+#ribbon.eureka.enabled=falsez
 
 ### 通过名称查找服务，需要使用euraka功能，通过服务名字查找
 zuul.routes.feign-client.serviceId=feign-client
@@ -16,6 +16,7 @@ zuul.routes.application-service.path=/application-service/**
 
 zuul.routes.user-service.serviceId=user-service
 zuul.routes.user-service.path=/user-service/**
+zuul.routes.user-service.strip-prefix: false
 
 zuul.routes.service-client.serviceId=service-client
 zuul.routes.service-client.path=/service-client/**
