--- a/zuul-api-gateway.properties
+++ b/zuul-api-gateway.properties
@@ -16,7 +16,7 @@ zuul.routes.application-service.path=/application-service/**
 
 zuul.routes.user-service.serviceId=user-service
 zuul.routes.user-service.path=/user-service/**
-zuul.routes.user-service.strip-prefix: false
+zuul.routes.user-service.strip-prefix=false
 
 zuul.routes.service-client.serviceId=service-client
 zuul.routes.service-client.path=/service-client/**
