--- a/springboot-admin.properties
+++ b/springboot-admin.properties
@@ -2,3 +2,6 @@ server.port=8802
 
 
 spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream,turbine.stream
+
+spring.mail.host=smtp.163.com
+spring.boot.admin.notify.mail.to=297206021@qq.com
